syntax = "proto3";

package com.cjrequena.sample.service;

option java_package = "com.cjrequena.sample.proto";
option java_outer_classname = "OrderProto";
option java_multiple_files = true;

// Order message
message Order {
  string id = 1;
  string account_id = 2;
  string total = 3;
  string description = 4;
  string status = 5;
  int64 created_at = 6; // Unix timestamp
  int64 updated_at = 7; // Unix timestamp
  int64 version = 8;
}

// Request messages
message CreateOrderRequest {
  Order order = 1;
}

message RetrieveOrderByIdRequest {
  string id = 1; // UUID as string
}

message RetrieveOrdersRequest {
  // Empty for now, could add pagination later
}

message UpdateOrderRequest {
  Order account = 1;
}

message DeleteOrderRequest {
  string id = 1; // UUID as string
}

// Response messages
message CreateOrderResponse {
  bool success = 1;
  string message = 2;
}

message RetrieveOrderByIdResponse {
  Order account = 1;
}

message RetrieveOrdersResponse {
  repeated Order accounts = 1;
}

message UpdateOrderResponse {
  bool success = 1;
  string message = 2;
}

message DeleteOrderResponse {
  bool success = 1;
  string message = 2;
}

// Order Service Definition
service OrderService {
  // Basic CRUD operations
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc RetrieveOrderById(RetrieveOrderByIdRequest) returns (RetrieveOrderByIdResponse);
  rpc RetrieveOrders(RetrieveOrdersRequest) returns (RetrieveOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
